[UTF-8][Japanese]

*Ver3.5x : 2020/xx/xx

-表示以外でのIE11サポートを止めました。((動くには動きますが、CSRFに脆弱です。))

**細かい変更点

-mod_rewriteを先に設定したとき、最初のアカウント追加がわかりにくい問題に対応。
-日付変更時間処理を除去しました。
-「プライベートブログ」かつ「表示パスワードモード」の時、直接ログイン可能にしました。
-【記法】{[tel:]}タグと、{[sms:]}タグを追加しました。
-【httpd】.gitフォルダへのアクセスを禁止しました。
-【httpd】ルートフォルダ内（.httpd.plと同じディレクトリ内）のファイルアクセスを無視するようにしました。
-【DB】DB再接続機能を付けました。
-【DB】prapere() を prapere_cached() に変更しました。
-【Fix】.fcgi(socket mode) + Apache + リバースproxy運用時にうまく動作しない。
-【Fix】ツリー表示のノードがずれている。
-【Fix】記事編集画面でアップロード詳細ボタンが2回目以降効かない。
-【Fix】記事編集時、先頭数字のタイトルからリンクキーを自動設定すると、余計な文字がつく。
-【Fix/Theme】nature-forest, nature-sky のドロップダウンメニューの背景が正しくない。
-【Fix/MariaDB】テキスト検索がうまく実行できない。
-【Fix/Plugin】sitemap.xmlの日付が正しく表示されない。（[https://adiary.adiary.jp/0419#c17:Thanks to runner]）
-【Base/System】
--【Compiler】全面的に書き直し、ブロック処理のバグが修正されました。
--【Compiler】break の検出方法を変更して処理を効率化しました。
--【Compiler】next, last, break を () なしで書けるよになりました。
--【Compiler】正規表現が直接書けるようになりました。
--【Compiler】strict modeが実装されました。
--【Compiler】forexecをforeachと書けるようにしました。
--【Compiler】foreach, ifexec 等の begin を省略できるようにしました。
--【Compiler】"++x"や"y--"等の記述を可能にしました。
--【構文】call() ファイルが見つからない場合にエラー表示をするようにしました。
--【Auth】ユーザ管理まわりを大幅更新しました。
--【Auth】ログイン失敗sleep（fail_sleep）機能を削除しました。((sleepしたところで複数同時ログインを試みればセキュリティ対策として意味がないため。))
--{<$Form_options.multipart_data_max_size>} オプションを削除しました。
--CSRF対策機能を除去しました。((Cookieの近年の仕様変更により、IE11以外では問題がなくなったため。))
-その他（多数）

*Ver3.40c : 2020/03/16

-SpeedyCGI用の起動スクリプトを削除しました。
-mod_perl対応コードを削除しました。
-adiary.fcgiにUNIX domain socketで利用時の調整をしました。関連して、[https://adiary.org/v3man/install2/nginx:Nginxで設定が一部変更]になっています。
-【httpd】パス設定機能を付けました。これにより Reverse Proxy での運用が楽になります。
-【httpd】UNIX domain socketモードを追加しました。
-【Plugin/webpush】通知送信時のステータスcodeを 201 か確認するようにしました。((従来は200番台であることのみ確認していました。))
-【Ver3.40a/Fix】リンク集の設定がうまく表示されない。（[https://adiary.adiary.jp/0419#c1:Thanks to やす]）
-【Ver3.40b/Fix】Perl5.8で2件目の投稿に失敗する。（[https://adiary.adiary.jp/0419#c8:Thanks to CCC]）
-【Ver3.40c/Fix】AmazonアフィリエイトIDの自動埋め込みが機能していない。
-他

*Ver3.34 : 2020/01/18
