@@ -20,7 +20,9 @@
 	private = flag
 	ping = flag
 
-	gaid = Google Analytics ID
+	ga4id = Google Analytics 4 ID
+	ga4id:filter0 = reg_del:[^\w\-]
+	gaid = Google Analytics UA ID
 	gaid:filter0 = reg_del:[^\w\-]
 
 	asid = AmazonアフィリエイトID
