@@ -2,7 +2,8 @@
 
 *Ver3.5x : 2020/xx/xx
 
--表示以外でのIE11サポートを止めました。((動くには動きますが、CSRFに脆弱です。))
+-表示以外でのIE11サポートを止めました。
+-[g:Google Analytics 4]に対応しました。
 
 **細かい変更点
 
